Implementa reportes y mejora encapsulamiento